--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,14 +4,14 @@
 
 @font-face {
     font-family: "League Gothic";
-    src: url("/build/fonts/league/LeagueGothic-Regular.otf");
+    src: url("../fonts/league/LeagueGothic-Regular.otf");
     font-style: normal;
     font-weight: normal;
 }
 
 @font-face {
     font-family: "Open Sans";
-    src: url("/build/fonts/open/OpenSans-Regular.ttf");
+    src: url("../fonts/open/OpenSans-Regular.ttf");
     font-style: normal;
     font-weight: normal;
 }
